methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:2: error: not found: value setCoueurBrosse
  setCoueurBrosse(c)
  ^