methods.flowerpot.FlowerPot.scala.code
def marqueSol(c:Color){
  setCoueurBrosse(c)
  baisseBrosse();leveBrosse()
  droite();avance();gauche();avance();gauche()
}

def Fleur(c:Color){
  for (i<-1 to 4){marqueSol(c)}
  avance()
  setCouleurBrosse(Color.YELLOW)
  baisseBrosse();leveBrosse
}

Fleur(Color.RED)